syntax = "proto2";
package msg;

//房间成员信息
message TexasPlayer 
{
    optional int64 roleid = 1;              //角色id
    optional int32 bankroll = 2;            //携带筹码
    optional int32 pos = 3;                 //座位位置
    optional int32 state = 4;               //游戏状态
    optional int32 num = 5;                 //面前筹码
    optional int32 initbankroll = 6;        //初始化筹码    
    optional int32 totalnum = 7;            //总下注
}

//返回房间信息
message RS2C_RetEnterRoomInfo
{
    optional int64 id = 1;                  //房间id
    optional int32 buttonpos = 2;           //庄家位置
    repeated int32 potchips = 3;            //奖池 主池 边池
    optional int32 roomid = 4;              //房间表id
    optional int32 ante = 5;                //台费
    optional int32 sblind = 6;              //小盲费
    optional int32 bblind = 7;              //大盲费
    optional int32 pos = 8;                 //当前说话位置
    optional int32 postime = 9;             //当前说话剩余时间
    optional int32 starttime = 10;          //这局开始时间
    repeated int32 publiccard = 11;         //公共牌
    repeated TexasPlayer playerlist = 12;   //参与玩家列表
    optional bool isshowcard = 13;          //是否亮牌
    repeated int32 handcard = 14;           //手牌
    optional int32 maxante = 15;            //最大台费
    optional int32 minraisenum = 16;        //最小加注
    optional int32 masterid = 17;           //房主id
    optional int32 blindlevel = 18;
    optional int32 blindtime = 19;
    optional int32 rebuytimes = 20;
    optional int32 addontimes = 21;
    optional int32 addbuy = 22;
    optional int32 rank = 23;
    optional int32 avgchips = 24;
    optional int32 join = 25;    
}

//拉取计时奖励信息
message C2RS_ReqTimeAwardInfo
{    
}

message RS2C_RetTimeAwardInfo
{
    optional int32 roomtype = 1;
}

//请求购买游戏币
message C2RS_ReqBuyInGame
{
    optional int32 num = 1;
    optional bool isAutoBuy = 2;
    optional int32 pos = 3;   
}

message RS2C_RetBuyInGame
{
}

//服务器推送玩家资产
message RS2C_RolePushPropertyChange
{
}

//服务器推送位置
message RS2C_PushSitOrStand
{
    optional int64 roleId = 1;              //玩家id
    optional int32 pos = 2;                 //玩家位置
    optional int32 state = 3;               //玩家状态
    optional int32 bankRoll = 4;            //玩家筹码
}

//请求个人数据
message C2RS_ReqFriendGetRoleInfo
{
    optional int64 roleid = 1;
}

message RS2C_RetFriendGetRoleInfo
{
    optional int32 diamond = 1;
    optional int32 gold = 2;
    optional int32 roleid = 3;
    optional string name = 4;
    optional string head = 5;
    optional int32 sex = 6;
    optional int32 level = 7;
    optional int32 exp = 8;
    optional string ip = 9;
    optional string sign = 10;
    optional int32 age = 11;
    optional int32 maxgold = 12;
    optional int32 maxgoldonetimes = 13;
    optional int32 friendnum = 14;
    optional int32 gametimes = 15;
    optional int32 wintimes = 16;
    repeated int32 maxhand = 17;
    optional int32 championtimes = 18;
    optional int32 vipexp = 19;
    optional int32 viptime = 20;
    optional int32 yearviptime = 21;
    optional int32 viplevel = 22;
    optional int32 createdtime = 23;
    optional int32 isoffline = 24;
    optional int32 stateid = 25;
    optional int32 stateconfid = 26;
    optional int32 entrytimes = 27;
    optional int32 showdowntimes = 28;
    optional int32 mttjointimes = 29;
    optional int32 mttprizetimes = 30;
    optional int32 gametimes2 = 31;
    optional int32 wintimes2 = 32;
    optional int32 entrytimes2 = 33;
    optional int32 showdowntimes2 = 34;    
}

//服务器推送时间奖励
message RS2C_PushTimeAwardRefresh
{
    optional int32 secTime = 1;
    optional int32 startTime = 2;    
}

//服务器推送下局开始
message RS2C_PushNextRoundStart
{
    optional int32 buttonPos = 1;       //庄家位
    optional int32 sBlindPos = 2;       //小盲位
    optional int32 bBlindPos = 3;       //大盲位
    optional int32 sBlind = 4;          //小盲注
    optional int32 bBlind = 5;          //大盲注
}

//服务器推送玩家筹码变化
message RS2C_PushChipsChange
{
    optional int32 roleId = 1;          //玩家角色id
    optional int32 bankRoll = 2;        //玩家筹码
}

//服务器推送玩家状态变化
message RS2C_PushPlayerStateChange
{
    optional int32 roleId = 1;          //玩家角色id
    optional int32 state = 2;           //玩家状态
    optional int32 num = 3;             //玩家面前筹码
}

//服务器推送手牌
message RS2C_PushHandCard
{
    repeated int32 card = 1;
}

//服务器推送行动位置
message RS2C_PushActionPosChange
{
    optional int32 pos = 1;             //当前行动位置
    optional int32 postime = 2;         //当前行动结束时间
}

//推送一轮押注结束
message RS2C_PushOneLoopOver
{
    repeated int32 card = 1;
    repeated int32 potchips = 2;
}

message PotInfo 
{
    optional int32 num = 1;
    optional int32 type = 2;
    repeated int32 roleid = 3;
}

message HandCardInfo
{    
    optional int32 roleId = 1;
    repeated int32 card = 2;
}

//推送牌局结束
message RS2C_PushOneRoundOver
{
    repeated PotInfo potList = 1;
    repeated HandCardInfo handCardList = 2;    
}

//请求行动 （加注 放弃 让牌）
message C2RS_ReqAction
{
    optional int32 state = 1;
    optional int32 num = 2;    
}

message RS2C_RetAction
{
}

// 请求坐下
message C2RS_ReqSitDown {
    optional int64 userid = 1;
    optional int32 seat = 2;
}

message RS2C_RetSitDown {
    optional string errmsg = 1;     // 错误信息(座位被他人坐下)
}

//请求站起
message C2RS_ReqStandUp {
    optional int64 userid = 1;
}

message RS2C_RetStandUp {
}

//请求亮牌
message C2RS_ReqBrightCard
{
}

message RS2C_RetBrightCard
{
}

//请求增加金币
message C2RS_ReqAddCoin
{
    optional int32 num = 1;
}

message RS2C_RetAddCoin
{
}


